@@ -1,0 +1,2 @@
+int value(void);
+int value1(void);
