@@ -1,0 +1,6 @@
+#include "orderlib.h"
+
+int value1(void)
+{
+   return 10;
+}
