@@ -1,0 +1,6 @@
+#include "orderlib.h"
+
+int value(void)
+{
+   return 200;
+}
