@@ -1,3 +1,9 @@
+2016-03-18   Donn Seeley <donn.seeley@windriver.com>
+        * src/rtld/rtld.c: rewrite build_local_scope to ensure breadth-first
+                processing
+	* testsuite/order: Add test to verify prelink/prelink-rtld resolution
+		order
+
 2016-03-18  Mark Hatle <mark.hatle@windriver.com>
 	* src/rtld: Add ability to debug scopes
 	* src/rtld/rtld.h, src/dso.c: Fix compilation warning
